fixed color theme for dark mode

--- a/src/app/csv-table/csv-table.component.scss
+++ b/src/app/csv-table/csv-table.component.scss
@@ -8,6 +8,6 @@
   width: 100%;
 }
 
-.mat-list-icon {
-  color: rgba(0, 0, 0, 0.54);
-}
+//.mat-list-icon {
+//  color: rgba(0, 0, 0, 0.54);
+//}
